fix: FAQ horizontal overflow

--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -2,7 +2,7 @@
   background-image: url("../../assets/bg\ images/WOC_LIS_09.gif");
   background-size: cover;
   background-size: 100vw 100%;
-  width: 100vw;
+  /* width: 100vw; */
   min-height: 110vh;
   padding-top: 10vh;
   background-repeat: no-repeat;
